--- a/blog-view-admin/package.json
+++ b/blog-view-admin/package.json
@@ -15,7 +15,7 @@
     "element-ui": "^2.11.0",
     "font-awesome": "^4.7.0",
     "nprogress": "^0.2.0",
-    "vue": "^3.1.0",
+    "vue": "^2.2.2",
     "vue-baidu-map": "^0.21.22",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^2.3.0",
@@ -55,7 +55,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
-    "vue-loader": "^16.0.0.",
+    "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
